# PytoneCore_leks_and_pract_archive

./: math
01.01/: ex02.py  ex04.py  ex05.py  ex06.py  ex07.py  ex10.py  ex11.py  ternarni
02.01/: ex.01.py  ex02.py  ex03.py  ex05.py  ex06.py  ex08.py  ex09.py
03.01/: 01.py
Autucheck and HW/HW_06/: HW_06.py
Autucheck and HW/HW_08/: faker_sett.py
Autucheck and HW/HW_09/: main.py  phone_book.json
Autucheck and HW/HW_M6/: HW_06.py  empty_folder.py  normalize.py
Autucheck and HW/autocheck_M1/: autocheck _09.py  autocheck_15.py
Autucheck and HW/autocheck_M2/: autocheck_01.py  autocheck_05.py  autocheck_06.py  calckulator
Gallows/: gallows.py
Other/: index.html  math.py
autocheck_M1/: autocheck_11.py
autocheck_M2/: autucheck_02.py
module 8/: HW_08  date.py
module3/: 01.py  02.py
module_12/: 00.py  j_son.py  set_state.py  text_pars.py
module_4/: echo.py  koncpeckt.py  lists.py  metods.py  path.py  set.py  slices.py  tuple.py
module_5/: Lekciya.py  find_number_of_phone.py  format.py  konspect.py  practice.py  reg_pract.py  regular_pattern.py  translater.py
module_6/: archives.py  konspekt.py  leksiya.py  password.txt
module_7/: def_main.py  konspekt.py  lektciya.py  requirements.txt
module_7/Project for package/: README.md  setup.cfg
module_7/Project for package/src/HW07_from_Vladislav_B/: init_.py
module_7/Project for package/src/HW07_from_Vladislav_B.egg-info/: PKG-INFO  SOURCES.txt
module_7/clean_folder/: setup.cfg
module_7/clean_folder/clean_folder.egg-info/: SOURCES.txt
module_9/: lambda_func.py  locking_closing.py
(+184 files in other folders)
