[project]
name = "HW07_from_Vladislav_B"
version = "0.0.1"
authors = [{ name="Vladislav_B", email=="rolmf85@gmail.com" },]
description = "Script for sorted files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: Apache License","Operating System :: OS Independent"]
[project.urls]
"Homepage" = "https://github.com/Roll1ngo/Home_works.git"
[options.entry_points]
console_scripts =
    clean-folder = clean_folder.clean:main
